package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "dsl",
    srcs = [
        "ast.cpp",
        "lexer.cpp",
        "lower.cpp",
        "parser.cpp",
        "stats.cpp",
    ],
    hdrs = [
        "ast.h",
        "lexer.h",
        "lower.h",
        "parser.h",
        "stats.h",
    ],
    deps = [
        "//zirgen/Dialect/ZHL/IR",
        "//zirgen/Dialect/ZHLT/IR",
        "//zirgen/Dialect/ZStruct/Analysis",
        "//zirgen/Dialect/Zll/Analysis",
        "//zirgen/Dialect/Zll/IR",
        "@llvm-project//llvm:Support",
    ],
)
cc_binary(
    name = "zirgen",
    srcs = ["driver.cpp"],
    deps = [
        "//risc0/core",
        "//zirgen/Conversions/Typing",
        "//zirgen/Dialect/ZHLT/IR:Codegen",
        "//zirgen/Main",
        "//zirgen/compiler/codegen",
        "//zirgen/compiler/layout",
        "//zirgen/compiler/picus",
    ],
)
cc_binary(
    name = "zirgen_helloworld",
    srcs = ["driver.cpp"],
    deps = [
        "//risc0/core",
        "//zirgen/Conversions/Typing",
        "//zirgen/Dialect/ZHLT/IR:Codegen",
        "//zirgen/Main",
        "//zirgen/compiler/codegen",
        "//zirgen/compiler/layout",
        "//zirgen/compiler/picus",
    ],
    args = [
            "/Users/charles/Documents/2zkvm/risc0/zirgen/zirgen/dsl/test/hello_world.zir",
            "--test",
        ],
)
