package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "dsl",
    srcs = [
        "ast.cpp",
        "lexer.cpp",
        "lower.cpp",
        "parser.cpp",
        "stats.cpp",
    ],
    hdrs = [
        "ast.h",
        "lexer.h",
        "lower.h",
        "parser.h",
        "stats.h",
    ],
    deps = [
        "//zirgen/Dialect/ZHL/IR",
        "//zirgen/Dialect/ZHLT/IR",
        "//zirgen/Dialect/ZStruct/Analysis",
        "//zirgen/Dialect/Zll/Analysis",
        "//zirgen/Dialect/Zll/IR",
        "@llvm-project//llvm:Support",
    ],
)
cc_binary(
    name = "zirgen",
    srcs = ["driver.cpp"],
    deps = [
        "//risc0/core",
        "//zirgen/Conversions/Typing",
        "//zirgen/Dialect/ZHLT/IR:Codegen",
        "//zirgen/Main",
        "//zirgen/compiler/codegen",
        "//zirgen/compiler/layout",
        "//zirgen/compiler/picus",
    ],
)
cc_binary(
    name = "zirgen_helloworld",
    srcs = ["driver.cpp"],
    deps = [
        "//risc0/core",
        "//zirgen/Conversions/Typing",
        "//zirgen/Dialect/ZHLT/IR:Codegen",
        "//zirgen/Main",
        "//zirgen/compiler/codegen",
        "//zirgen/compiler/layout",
        "//zirgen/compiler/picus",
    ],
    args = [
            "/Users/charles/Documents/2zkvm/risc0/zirgen/zirgen/dsl/test/hello_world.zir",
            "--test",
        ],
)
cc_binary(
    name = "zirgen_keccak",
    srcs = ["driver.cpp"],
    deps = [
        "//risc0/core",
        "//zirgen/Conversions/Typing",
        "//zirgen/Dialect/ZHLT/IR:Codegen",
        "//zirgen/Main",
        "//zirgen/compiler/codegen",
        "//zirgen/compiler/layout",
        "//zirgen/compiler/picus",
        "//zirgen/circuit/keccak:*"
    ],
    args = [
        "-I",
        "/Users/charles/Documents/2zkvm/risc0/zirgen/zirgen/circuit/keccak",
        "--test",
        "/Users/charles/Documents/2zkvm/risc0/zirgen/zirgen/circuit/keccak/test1k.zir",
        "--input-data-hex", "010000000000000054686520717569636B2062726F776E20666F78206A756D7073206F76657220746865206C617A7920646F672E0100000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000080578951e24efd62a3d63a86f7cd19aaa53c898fe287d2Q552133220370240b572d0000000000000000"
    ],
)