load("//bazel/rules/zirgen:dsl-defs.bzl", "zirgen_genfiles")

package(
    default_visibility = ["//visibility:public"],
)

zirgen_genfiles(
    name = "FibonacciIncs",
    zir_file = ":fibonacci.zir",
    zirgen_outs = [
        (
            ["--emit=rust"],
            "fibonacci.rs.inc",
        ),
    ],
)
zirgen_genfiles(
    name = "HelloworldIncs",
    zir_file = ":hello_world.zir",
    zirgen_outs = [
        (
            ["--emit=rust"],
            "hello_world.rs.inc",
        ),
    ],
)
